--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.10",
     "@stitches/react": "^1.2.8",
-    "next": "13.4.8",
+    "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.6",
+    "@babel/preset-env": "^7.22.7",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@explowstudio/eslint-config": "^1.1.0",
@@ -30,11 +31,11 @@
     "@storybook/nextjs": "^7.0.26",
     "@storybook/react": "7.0.26",
     "@storybook/testing-library": "^0.2.0",
-    "@types/node": "20.3.3",
+    "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
+    "eslint-config-next": "13.4.9",
     "eslint-plugin-storybook": "^0.6.12",
     "storybook": "7.0.26",
     "typescript": "5.1.6"
