--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@phosphor-icons/react": "^2.0.10",
     "@stitches/react": "^1.2.8",
     "next": "13.4.9",
+    "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
