--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
     "@stitches/react": "^1.2.8",
+    "framer-motion": "^10.12.18",
     "next": "13.4.9",
     "polished": "^4.2.2",
     "react": "18.2.0",
