--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@stitches/react": "^1.2.8",
     "framer-motion": "^10.12.18",
     "next": "13.4.9",
