--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@stitches/react": "^1.2.8",
     "framer-motion": "^10.12.18",
     "next": "13.4.9",
