--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "next": "13.4.9",
     "polished": "^4.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-input-mask": "^2.0.4",
+    "zod": "^3.21.4",
+    "zod-validation-error": "^1.3.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.7",
@@ -39,6 +42,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-input-mask": "^3.0.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "eslint-plugin-storybook": "^0.6.12",
