--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-input-mask": "^2.0.4",
-    "zod": "^3.21.4",
-    "zod-validation-error": "^1.3.1"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.7",
