--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@stitches/react": "^1.2.8",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
+    "libphonenumber-js": "^1.10.38",
     "next": "13.4.9",
     "polished": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-input-mask": "^2.0.4",
+    "resend": "^0.17.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
