--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@stitches/react": "^1.2.8",
+    "@vercel/analytics": "^1.1.1",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
     "libphonenumber-js": "^1.10.38",
